# pers

./: .dockerignore  .env.example  .gitignore  README.md  deploy.sh  docker-compose.dev.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  init-letsencrypt.sh  pyproject.toml  setup-ssl.sh
.github/workflows/: deploy.yml
backend/: Dockerfile  Dockerfile.prod  Dockerfile.typesense  Dockerfile.typesense.prod  init-typesense.sh  pyproject.toml  requirements-dev.txt  requirements.txt  run_tests.sh
backend/app/: main.py  typesense_client.py
backend/src/app/: email.py  main.py  typesense_client.py
backend/src/app/middleware/: logging.py  security.py
backend/src/app/routes/: contact.py  search.py  upload.py
backend/tests/: conftest.py  test_connection.py  test_contact_integration.py  test_routes.py  test_typesense_client_integration.py
frontend/: Dockerfile  Dockerfile.prod  pyproject.toml  requirements-dev.txt  requirements.txt  run_tests.sh
frontend/app/: main.py
frontend/app/static/css/: styles.css
frontend/app/templates/: index.html  upload.html
frontend/src/app/: main.py
frontend/src/app/routes/: admin.py  home.py  static_pages.py  upload.py
frontend/src/app/static/css/: styles.css
frontend/src/app/static/fonts/: bootstrap-icons.css
frontend/src/app/templates/: about.html  admin.html  base.html  contact.html  index.html  privacy.html  terms.html  upload.html
frontend/tests/: conftest.py  test.json  test_admin_routes.py  test_routes.py  test_ui_routes.py
nginx/: Dockerfile.prod  nginx.conf  nginx.dev.conf  nginx.prod.conf
nginx/snippets/: cors.conf  proxy-headers.conf  security-headers.conf  ssl-params.conf
