# frontend/pyproject.toml
[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pers-frontend"
version = "0.1.0"
description = "Frontend for Pers, a TypeSense-Starlette Project"
authors = [
    { name = "Nina Barzh" }
]
dependencies = [
    "starlette~=0.46.1",
    "uvicorn~=0.34.0",
    "jinja2~=3.1.6",
    "httpx~=0.28.1",
    "python-multipart~=0.0.20",
    "pytest~=8.3.5",
    "pytest-cov~=6.0.0",
    "pytest-asyncio~=0.25.3",
]

[tool.setuptools.packages.find]
where = ["src"]  # Look for packages in the `src` directory

[tool.pytest.ini_options]
addopts = "-v --showlocals --cov=backend --cov-report=term-missing"
testpaths = [
    "tests",
]
