# frontend/pyproject.toml
[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pers-frontend"
version = "0.1.0"
description = "Frontend for Pers, a TypeSense-Starlette Project"
authors = [
    { name = "Nina Barzh & Cor Westra" }
]
dependencies = [
    "starlette~=0.46.1",
    "uvicorn~=0.34.0",
    "jinja2~=3.1.6",
    "httpx~=0.28.1",
    "python-multipart~=0.0.20",
    "pytest~=8.3.5",
    "pytest-cov~=6.0.0",
    "pytest-asyncio~=0.25.3",
    "pytest-mock~=3.14.0",
    "python_dotenv~=1.0.1",
    "starlette_csrf~=3.0.0",
    "requests~=2.32.3",
]

[tool.poetry.plugins."pers_frontend"]
"app" = "pers_frontend.app:app"

[tool.setuptools]
packages = ["app"]
package-dir = {"app" = "src/app"}  # Explicit package directory mapping

[tool.pytest.ini_options]
addopts = "-v"
testpaths = [
    "tests",
]
# pytest-asyncio is deprecating the default behavior of the event loop scope for asynchronous fixtures.
# In future versions, the default scope will change to function, but currently, it defaults to the fixture caching
# scope.
asyncio_default_fixture_loop_scope = "function"
